--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive 404 website - Bedimcode</title>
+        <title>Tembak Three @2022</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
-                    XCOMPANY
+                <a href="https://m.instagram.com/mhmdsairi_" class="nav__logo">
+                    mhmdsairi
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -51,10 +51,10 @@
             <section class="home">
                 <div class="home__container container">
                     <div class="home__data">
-                        <span class="home__subtitle">Error 404</span>
-                        <h1 class="home__title">Hey Buddy</h1>
+                        <span class="home__subtitle">tembak three 2022</span>
+                        <h1 class="home__title">Hey Users</h1>
                         <p class="home__description">
-                            We can't seem to find the page <br> you are looking for.
+                            sebelum tembak paket <br> install terlebih dahulu bima+.
                         </p>
                         <a href="#" class="home__button">
                             Go Home
