--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 </div>
 
                 <footer class="home__footer">
-                    <span>(554) 987-654</span>
+                    <span>xhamster.com</span>
                     <span>|</span>
-                    <span>info@company.com</span>
+                    <span>mhmdsairi@my.id</span>
                 </footer>
             </section>
         </main>
