--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <p class="home__description">
                             sebelum tembak paket <br> install terlebih dahulu bima+.
                         </p>
-                        <a href="#" class="home__button">
-                            Go Home
+                        <a href="http://bimaplus.tri.co.id/product?id=23044" class="home__button">
+                            25GB 1 Month 25k
                         </a>
                     </div>
 
