--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <p class="home__description">
                             sebelum tembak paket <br> install terlebih dahulu bima+.
                         </p>
-                        <a href="http://bimaplus.tri.co.id/product?id=23044" class="home__button">
+                        <a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
                             25GB 1 Month 25k
                         </a>
                     </div>
