--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                         <a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
                             25GB 1 MONTH 25K
                         </a>
-                        <br><a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
-                            25GB 1 MONTH 25K
-                        </a></br>
+                        <a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
+                            100GB 1 MONTH 135K
+                        </a>
                     </div>
 
                     <div class="home__img">
