--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         <a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
                             25GB 1 MONTH 25K
                         </a>
-                        <a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
-                            100GB 1 MONTH 135K
+                        <a href="https://bima.tri.co.id/home-detail/22849" class="home__button">
+                            20GB 20 DAY 35K
                         </a>
                     </div>
 
