--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                         <a href="https://bima.tri.co.id/home-detail/22849" class="home__button">
                             20GB 20 DAY 35K
                         </a>
+                        <a href="https://my.tri.co.id/home-detail/1225547/-?d=&utm=&utm_source=&utm_medium=&utm_campaign=&utm_content=&utm_term=&a=&c=&rfu=" class="home__button">
+                            50GB 7 DAY 10K
+                        </a>
+                        
                     </div>
 
                     <div class="home__img">
