--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     
                 <footer class="home__footer">
-                    <span>xhamster.com</span>
+                    <span>vistapasta</span>
                     <span>|</span>
                     <span>mhmdsairi@my.id</span>
                 </footer>
