--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <!-- Toggle button -->
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class='bx bx-grid-alt'></i>
+                    <i class='bx bx-lemon'></i>
                 </div>
             </nav>
         </header>
