--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
 
                     <div class="nav__close" id="nav-close">
-                        <i class='bx bx-x'></i>
+                        <i class='bx bx-popsicle'></i>
                     </div>
                 </div>
 
