--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--==================== HEADER ====================-->
         <header class="header">
             <nav class="nav container">
-                <a href="https://m.instagram.com/mhmdsairi_" class='bx bx-popsicle'>
+                <a href="https://m.instagram.com/mhmdsairi_" class="nav__logo">
                     mhmdsairi 
                 </a>
 
