--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#" class="nav__link">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">About</a>
+                            <a href="#" class="nav__logo">About</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">Contact</a>
