--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <header class="header">
             <nav class="nav container">
                 <a href="https://m.instagram.com/mhmdsairi_" class="nav__logo">
-                    mhmdsairi@vp2022
+                    mhmdsairi
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Home</a>
+                            <a href="#" class="nav__logo">Home</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__logo">About</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Contact</a>
+                            <a href="#" class="nav__logo">Contact</a>
                         </li>
                     </ul>
 
