--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                         <a href="https://my.tri.co.id/home-detail/1225547/-?d=&utm=&utm_source=&utm_medium=&utm_campaign=&utm_content=&utm_term=&a=&c=&rfu=" class="home__button">
                             50GB 7 DAY 10K
                         </a>
+                        <a href="https://bima.tri.co.id/home-detail/25676" class="home__button">
+                            20GB 14 DAY 15K
+                        </a>
                         
                     </div>
 
