--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         <a href="https://bima.tri.co.id/home-detail/25676" class="home__button">
                             20GB 14 DAY 15K
                         </a>
+                        <a href="https://bima.tri.co.id/home-detail/25669" class="home__button">
+                            5GB 1 DAY 1RP
+                        </a>
                         
                     </div>
 
