--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                         <a href="https://bima.tri.co.id/home-detail/22648/25GB-25rb-%28Diskon%29?msisdn=null&sso=null&imei=WebSelfcare" class="home__button">
                             25GB 1 MONTH 25K
                         </a>
-                        <br><a href="https://bima.tri.co.id/home-detail/22849" class="home__button">
+                        <a href="https://bima.tri.co.id/home-detail/22849" class="home__button">
                             20GB 20 DAY 35K
-                        </a></br>
-                        <br><a href="https://my.tri.co.id/home-detail/1225547/-?d=&utm=&utm_source=&utm_medium=&utm_campaign=&utm_content=&utm_term=&a=&c=&rfu=" class="home__button">
+                        </a>
+                        <a href="https://my.tri.co.id/home-detail/1225547/-?d=&utm=&utm_source=&utm_medium=&utm_campaign=&utm_content=&utm_term=&a=&c=&rfu=" class="home__button">
                             50GB 7 DAY 10K
-                        </a></br>
+                        </a>
                         <a href="https://bima.tri.co.id/home-detail/25676" class="home__button">
                             20GB 14 DAY 15K
                         </a>
